--- a/CyanShaderLib/tests/includes/CMakeLists.txt
+++ b/CyanShaderLib/tests/includes/CMakeLists.txt
@@ -1,21 +1,15 @@
 SET(
-    APP_EXE basicApp
+    APP_EXE includesTest
 )
 
 ADD_EXECUTABLE(
-    ${APP_EXE}
+    ${APP_EXE} 
     main.cpp
 )
-
-#VCPKG LIBS
-find_package(glfw3 CONFIG REQUIRED)
-find_package(glew CONFIG REQUIRED)
 
 include_directories(
   ${PROJECT_NAME}
   "../../include/"
-  ${GLEW_INCLUDE_DIRS}
-  ${GLFW_INCLUDE_DIRS}
 )
 
 target_include_directories(
@@ -26,12 +20,7 @@ target_include_directories(
 
 TARGET_LINK_LIBRARIES(
     ${APP_EXE} 
-    opengl32 
-    winmm
-    gdi32
     CyanShaderLib
-#    GLEW::GLEW
-    glfw
 )
 
 add_test(
