--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,14 +22,80 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    #-uses: actions/cache@v3   <===== YOU DO NOT NEED THIS!
 
-    - name: Build
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    # Install latest CMake and Ninja.
+    - uses: lukka/get-cmake@latest
+    # Or pin to a specific CMake version:
+    # lukka/get-cmake@v3.27
+
+    # Setup vcpkg: ensures vcpkg is downloaded and built.
+    # Since vcpkg.json is being used later on to install the packages
+    # when `run-cmake` runs, no packages are installed at this time
+    # (and vcpkg does not run).
+    - name: Setup anew (or from cache) vcpkg (and does not build any package)
+      uses: lukka/run-vcpkg@v11 # Always specify the specific _version_ of the
+                                # action you need, `v10` in this case to stay up
+                                # to date with fixes on the v11 branch.
+      #with:
+        # This is the default location of the directory containing vcpkg sources.
+        # Change it to the right location if needed.
+        # vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+
+        # If not using a submodule for vcpkg sources, this specifies which commit
+        # id must be checkout from a Git repo.
+        # Note: it must not be set if using a Git submodule for vcpkg.
+        # vcpkgGitCommitId: '${{ matrix.vcpkgCommitId }}'
+
+        # This is only needed if the command `vcpkg install` must run at this step.
+        # Instead it is highly suggested to let `run-cmake` to run vcpkg later on
+        # using the vcpkg.cmake toolchain. The default is `false`.
+        # runVcpkgInstall: true
+
+        # This is only needed if `runVpkgInstall` is `true`.
+        # This glob expression used to locate the vcpkg.json and  use
+        # its directory location as `working directory` when running `vcpkg install`.
+        # Change it to match a single manifest file you want to use.
+        # Note: do not use `${{ github.context }}` to compose the value as it
+        # contains backslashes that would be misinterpreted. Instead
+        # compose a value relative to the root of the repository using
+        # `**/path/from/root/of/repo/to/vcpkg.json` to match the desired `vcpkg.json`.
+        # vcpkgJsonGlob: '**/vcpkg.json'
+
+    - name: Run CMake consuming CMakePreset.json and run vcpkg to build packages
+      uses: lukka/run-cmake@v10
+      with:
+        # This is the name of the CMakePresets.json's configuration to use to generate
+        # the project files. This configuration leverages the vcpkg.cmake toolchain file to
+        # run vcpkg and install all dependencies specified in vcpkg.json.
+        configurePreset: 'ninja-multi-vcpkg'
+        # Additional arguments can be appended to the cmake command.
+        # This is useful to reduce the number of CMake's Presets since you can reuse
+        # an existing preset with different variables.
+        configurePresetAdditionalArgs: "['-DENABLE_YOUR_FEATURE=1']"
+
+        # This is the name of the CMakePresets.json's configuration to build the project.
+        buildPreset: 'ninja-multi-vcpkg'
+        # Additional arguments can be appended when building, for example to specify the
+        # configuration to build.
+        # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
+        buildPresetAdditionalArgs: "['--config Release']"
+
+        # This is the name of the CMakePresets.json's configuration to test the project with.
+        testPreset: 'ninja-multi-vcpkg'
+        # Additional arguments can be appended when testing, for example to specify the config
+        # to test.
+        # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
+        testPresetAdditionalArgs: "['--config Release']"
+
+    # - name: Configure CMake
+    #   # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+    #   # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+    #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+
+    # - name: Build
+    #   # Build your program with the given configuration
+    #   run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     # - name: Test
     #   working-directory: ${{github.workspace}}/build
