--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,6 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: recursive
+
+    - name: Checkout submodules
+      run: git submodule update --init --recursive
 
     #-uses: actions/cache@v3   <===== YOU DO NOT NEED THIS!
 
