--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -73,25 +73,25 @@ jobs:
         # This is the name of the CMakePresets.json's configuration to use to generate
         # the project files. This configuration leverages the vcpkg.cmake toolchain file to
         # run vcpkg and install all dependencies specified in vcpkg.json.
-        configurePreset: 'ninja-multi-vcpkg'
+        configurePreset: 'x64-release'
         # Additional arguments can be appended to the cmake command.
         # This is useful to reduce the number of CMake's Presets since you can reuse
         # an existing preset with different variables.
-        configurePresetAdditionalArgs: "['-DENABLE_YOUR_FEATURE=1']"
+        # configurePresetAdditionalArgs: "['-DENABLE_YOUR_FEATURE=1']"
 
         # This is the name of the CMakePresets.json's configuration to build the project.
-        buildPreset: 'ninja-multi-vcpkg'
+        buildPreset: x64-release'
         # Additional arguments can be appended when building, for example to specify the
         # configuration to build.
         # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
         buildPresetAdditionalArgs: "['--config Release']"
 
         # This is the name of the CMakePresets.json's configuration to test the project with.
-        testPreset: 'ninja-multi-vcpkg'
+        # testPreset: 'ninja-multi-vcpkg'
         # Additional arguments can be appended when testing, for example to specify the config
         # to test.
         # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
-        testPresetAdditionalArgs: "['--config Release']"
+        # testPresetAdditionalArgs: "['--config Release']"
 
     # - name: Configure CMake
     #   # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
